fix spacing for sharing-links

--- a/source/css/_header.scss
+++ b/source/css/_header.scss
@@ -191,6 +191,7 @@
 
   a{ 
     display: block;
+    margin-bottom: 2px;
     &:hover {
       svg .background {
         * { 
